added option for user to keep screen awake while scanning

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "alarms",
     "scripting",
     "tabs",
-    "offscreen"
+    "offscreen",
+    "power"
   ],
   "host_permissions": [
     "<all_urls>"
